GeoSpatial APP Front End

--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
             <h1>🛰️ Satellite Trajectory Classification System</h1>
             <p class="subtitle">Advanced ML-Powered Orbital Prediction Engine with Explainability</p>
             <p style="color: #66aacc; margin-top: 10px;">Random Forest Classifier | Accuracy: 100% | F1: 1.0000</p>
-            <p class="subtitle">Mauro Travieso - Big Data Engineer</p>
+            <p style="color: #66aacc; margin-top: 12px;">Mauro Travieso - Big Data Engineer</p>
         </header>
 
         <div class="main-content">
