GeoSpatial App Front End

--- a/index.html
+++ b/index.html
@@ -459,6 +459,13 @@
         .modal-close:hover {
             color: #00ff88;
         }
+        
+        .footer {
+            background: #2c3e50;
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
     </style>
 </head>
 <body>
@@ -654,6 +661,11 @@
                 🗑️ Clear History
             </button>
         </div>
+    </div>
+    
+    <div class="footer">
+        <p>© 2025 Mauro Travieso - Satellite Trajectory Classification System | Production Deployment v1.0</p>
+        <p>Models trained with PySpark on 3,588 vehicle records</p>
     </div>
 
     <script>
