--- a/index.html
+++ b/index.html
@@ -665,9 +665,9 @@
     
     <div class="footer">
         <p>© 2025 Mauro Travieso - Satellite Trajectory Classification System | Production Deployment v1.0</p>
-        <p>Models trained with PySpark on 3,588 vehicle records</p>
+        <p>Models trained with PySpark on real-time ingested satellite records</p>
     </div>
-
+    
     <script>
         // Create starfield
         function createStars() {
